[package]
name = "mocopi_parser"
version = "0.2.0"
edition = "2021"
authors = ["Ryuya Hirayama <ryuya.hirayama@fourier.jp>"]
description = "A parser of streamed data from mocopi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.163", features = ["derive"] }
